--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <meta property="og:title" content="enviar mensaje en WhatsApp ahora❤️">
     <meta property="og:description" content="WhatsApp">
     <meta property="og:image" content="https://i.postimg.cc/yNJBhBdx/Pics-by-onlyforfan-online-on-tg-98.jpg">
-    <meta property="og:url" content="https://propositionpower.com/eky96040jr?key=6e9543c0b3f3f2141ec35f79c3a48c7b">
+    <meta property="og:url" content="https://shorter.me/_vDuZ">
     
     <!-- Meta etiquetas para Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="enviar mensaje ❤️">
     <meta name="twitter:description" content="WhatsApp">
     <meta name="twitter:image" content="https://i.postimg.cc/ZnFNsVCj/Only-Share-Official-TELEGRAM-3217.jpg">
-    <meta name="twitter:url" content="https://propositionpower.com/eky96040jr?key=6e9543c0b3f3f2141ec35f79c3a48c7b">
+    <meta name="twitter:url" content="https://shorter.me/_vDuZ">
     <meta name="twitter:site" content="@tu_usuario_de_twitter">
 
     <!-- Redirección automática usando JavaScript -->
     <script type="text/javascript">
-        window.location.href = "https://propositionpower.com/eky96040jr?key=6e9543c0b3f3f2141ec35f79c3a48c7b";
+        window.location.href = "https://shorter.me/_vDuZ";
     </script>
 </head>
 <body>
     <!-- Contenido opcional si el navegador no soporta la redirección -->
-    <p>Si no eres redirigido automáticamente, <a href="https://propositionpower.com/eky96040jr?key=6e9543c0b3f3f2141ec35f79c3a48c7b">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="https://shorter.me/_vDuZ">haz clic aquí</a>.</p>
 </body>
 </html>
