--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>enviar mensaje❤️</title>
 
     <!-- Meta etiquetas para la vista previa en redes sociales (Open Graph) -->
-    <meta property="og:title" content="enviar mensaje en WhatsApp ahora❤️">
+    <meta property="og:title" content="enviar mensaje en WhatsApp">
     <meta property="og:description" content="WhatsApp">
     <meta property="og:image" content="https://i.postimg.cc/yNJBhBdx/Pics-by-onlyforfan-online-on-tg-98.jpg">
     <meta property="og:url" content="https://shorter.me/_vDuZ">
