--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>enviar mensaje❤️</title>
 
     <!-- Meta etiquetas para la vista previa en redes sociales (Open Graph) -->
-    <meta property="og:title" content="enviar mensaje en WhatsApp">
+    <meta property="og:title" content="haz click para chat en en WhatsApp ">
     <meta property="og:description" content="WhatsApp">
-    <meta property="og:image" content="https://i.postimg.cc/fb34FPLJ/FB-IMG-1731542961617.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/Qd4WNhsh/Only-Share-Official-TELEGRAM-334.jpg">
     <meta property="og:url" content="https://tinyurl.com/3ybhph64">
     
     <!-- Meta etiquetas para Twitter Cards -->
