--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Meta etiquetas para la vista previa en redes sociales (Open Graph) -->
     <meta property="og:title" content="haz click para chat en en WhatsApp ">
     <meta property="og:description" content="WhatsApp">
-    <meta property="og:image" content="https://i.postimg.cc/fyGwndqL/RDT-20241025-2315001150376100545968061.webp">
+    <meta property="og:image" content="https://i.postimg.cc/5NFMGyfh/Only-Share-Official-TELEGRAM-853.jpg">
     <meta property="og:url" content="https://tinyurl.com/3ybhph64">
     
     <!-- Meta etiquetas para Twitter Cards -->
