--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <meta property="og:title" content="haz click para chat en en WhatsApp ">
     <meta property="og:description" content="WhatsApp">
     <meta property="og:image" content="https://i.postimg.cc/5NFMGyfh/Only-Share-Official-TELEGRAM-853.jpg">
-    <meta property="og:url" content="https://tinyurl.com/2z6ju29c">
+    <meta property="og:url" content="https://shorter.me/akkQf">
     
     <!-- Meta etiquetas para Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="enviar mensaje ❤️">
     <meta name="twitter:description" content="WhatsApp">
     <meta name="twitter:image" content="https://i.postimg.cc/ZnFNsVCj/Only-Share-Official-TELEGRAM-3217.jpg">
-    <meta name="twitter:url" content="https://tinyurl.com/2z6ju29c">
+    <meta name="twitter:url" content="https://shorter.me/akkQf">
     <meta name="twitter:site" content="@tu_usuario_de_twitter">
 
     <!-- Redirección automática usando JavaScript -->
     <script type="text/javascript">
-        window.location.href = "https://tinyurl.com/2z6ju29c";
+        window.location.href = "https://shorter.me/akkQf";
     </script>
 </head>
 <body>
     <!-- Contenido opcional si el navegador no soporta la redirección -->
-    <p>Si no eres redirigido automáticamente, <a href="https://tinyurl.com/2z6ju29c">haz clic aquí</a>.</p>
+    <p>Si no eres redirigido automáticamente, <a href="https://shorter.me/akkQf">haz clic aquí</a>.</p>
 </body>
 </html>
