--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>enviar mensaje❤️</title>
-
-    <!-- Meta etiquetas para la vista previa en redes sociales (Open Graph) -->
-    <meta property="og:title" content="haz click para chat en en WhatsApp ">
-    <meta property="og:description" content="WhatsApp">
-    <meta property="og:image" content="https://i.postimg.cc/5NFMGyfh/Only-Share-Official-TELEGRAM-853.jpg">
-    <meta property="og:url" content="https://shorter.me/akkQf">
-    
-    <!-- Meta etiquetas para Twitter Cards -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="enviar mensaje ❤️">
-    <meta name="twitter:description" content="WhatsApp">
-    <meta name="twitter:image" content="https://i.postimg.cc/ZnFNsVCj/Only-Share-Official-TELEGRAM-3217.jpg">
-    <meta name="twitter:url" content="https://shorter.me/akkQf">
-    <meta name="twitter:site" content="@tu_usuario_de_twitter">
-
-    <!-- Redirección automática usando JavaScript -->
-    <script type="text/javascript">
-        window.location.href = "https://shorter.me/akkQf";
-    </script>
+  <meta charset="UTF-8">
+  <title>Video con publicidad</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      text-align: center;
+    }
+    iframe {
+      border: none;
+    }
+  </style>
 </head>
 <body>
-    <!-- Contenido opcional si el navegador no soporta la redirección -->
-    <p>Si no eres redirigido automáticamente, <a href="https://shorter.me/akkQf">haz clic aquí</a>.</p>
+
+  <!-- Video Embed -->
+  <iframe src="https://streamtape.com/e/V0WlKvkB4GFK240/" width="100%" height="360" allowfullscreen></iframe>
+
+  <!-- Publicidad Adsterra (direct link) -->
+  <iframe src="https://scorchobservedsow.com/capq3wvknk?key=b8c41399ac7c0051bf2af1d6c78a3eca" width="100%" height="300"></iframe>
+
 </body>
 </html>
